# image_reconstruction

./: CMakeLists.txt  README.md
config/: example.yml
src/: CMakeLists.txt  main.cpp  reconstruction.cpp  reconstruction.h
